Another attempt at fixing whitespace in safari.

--- a/styles.css
+++ b/styles.css
@@ -43,20 +43,33 @@
 html, body {
     padding: 0;
     margin: 0;
+    height: 100%;
+    scrollbar-gutter: stable;
+    background-color: var(--background-color);
+}
+
+::-webkit-scrollbar {
+    width: 0;
 }
 
 body {
 background-color: transparent;
 color: var(--text-light);
 font-family: roboto mono;
+display: flex;
+flex-direction: column;
 }
 
 .view {
     display: none;
 }
 
+main {
+    flex: 1;
+}
+
 section {
-    min-height: calc(100dvh - 70px);
+    min-height: 100%;
 }
 
 .view.active {
